fix(katago): preserve renamed bundled profiles (#528)
Persist bundled profile ownership independently of display names and retain the generated command as its repair baseline.

Migrate eligible legacy profiles, preserve names and startup selections, and protect customized commands during startup and Auto Setup.

Closes #521